--- a/src/app/core/features/card/card.component.html
+++ b/src/app/core/features/card/card.component.html
@@ -7,6 +7,6 @@
   </div> -->
 </mat-dialog-content>
 <mat-dialog-actions align="center">
-  <button mat-stroked-button color="primary" (click)="openSheet()" >Abre Texto</button>
+  <button mat-stroked-button color="primary" (click)="openSheet()" >Detalhes</button>
   <button mat-stroked-button mat-dialog-close color="warn">Fechar</button>
 </mat-dialog-actions>
